tests/objects/objects.exp
Error ----------------------------------------------------- compatibility.js:3:9

Cannot assign `y` to `x` because:
 - in property `x`, property `bar` is missing in object type [1] but exists in
   object type [2].
 - in property `x`, property `foo` is missing in object type [2] but exists in
   object type [1].


Error ----------------------------------------------------- compatibility.js:7:9

Cannot assign `y` to `x` because in property `foo`, number [1] is incompatible
with string [2].


Error ---------------------------------------------------- compatibility.js:11:9

Cannot assign `y` to `x` because in property `x.foo`, number [1] is incompatible
with string [2].


Error ---------------------------------------------------- compatibility.js:15:9

Cannot assign `y` to `x` because in property `foo`, number [1] is incompatible
with string [2].


Error ---------------------------------------------------- compatibility.js:19:9

Cannot assign `y` to `x` because in property `x.foo`, number [1] is incompatible
with string [2].


Error ---------------------------------------------------- compatibility.js:23:9

Cannot assign `y` to `x` because in property `foo`, string [1] is incompatible
with number [2].


Error ---------------------------------------------------- compatibility.js:27:9

Cannot assign `y` to `x` because in property `x.foo`, number [1] is incompatible
with string [2].


Error ------------------------------------------------------- conversion.js:10:2

Cannot cast `Object(...)` to `Number` because object type [1] is incompatible
with `Number` [2].


Error ------------------------------------------------------- conversion.js:19:4

Cannot call `z.charAt` because property `charAt` is missing in `Number` [1].


Error ----------------------------------------------------------- objects.js:4:4

Cannot get `x.foo` because property `foo` is missing in object type [1].


Error ----------------------------------------------------------- objects.js:5:4

Cannot get `x['foo']` because property `foo` is missing in object type [1].


Error ----------------------------------------------------------- objects.js:7:2

Cannot cast `x.bar` to boolean because string [1] is incompatible with
boolean [2].


Error ----------------------------------------------------------- objects.js:8:2

Cannot cast `x['123']` to boolean because string [1] is incompatible with
boolean [2].


Error ---------------------------------------------------------- objects.js:9:12

Cannot assign `false` to `x['123']` because boolean [1] is incompatible with
string [2].


Error ---------------------------------------------------------- objects.js:12:4

Cannot get `x[`...`]` because property `foo` is missing in object type [1].


Error --------------------------------------------------------- objects.js:15:12

Cannot assign `123` to `y['foo']` because number [1] is incompatible with
string [2].


Error ---------------------------------------------------------- objects.js:16:3

Cannot assign `'abc'` to `y['bar']` because property `bar` is missing in object
type [1].


Error ---------------------------------------------------------- objects.js:18:2

Cannot cast `y['hasOwnProperty']` to string because function type [1] is
incompatible with string [2].


Error ------------------------------------------------ unaliased_assign.js:20:10

Cannot assign `obj` to `glob` because in property `x`, number [1] is
incompatible with string [2].



Found 20 errors
